--- a/docs/multi-regex.ipynb
+++ b/docs/multi-regex.ipynb
@@ -614,7 +614,7 @@
     {
      "data": {
       "text/plain": [
-       "['wo', 'wi', 'wh']"
+       "['wh', 'wo', 'wi']"
       ]
      },
      "execution_count": 23,
@@ -634,7 +634,7 @@
     {
      "data": {
       "text/plain": [
-       "['whe', 'wha', 'why', 'whi', 'who']"
+       "['whe', 'why', 'wha', 'whi', 'who']"
       ]
      },
      "execution_count": 24,
@@ -701,7 +701,7 @@
     {
      "data": {
       "text/plain": [
-       "[[1, 1], [1, 3], [1, 2]]"
+       "[[1, 3], [1, 1], [1, 2]]"
       ]
      },
      "execution_count": 27,
@@ -721,7 +721,7 @@
     {
      "data": {
       "text/plain": [
-       "[[1, 2, 5], [1, 2, 3]]"
+       "[[1, 2, 3], [1, 2, 5]]"
       ]
      },
      "execution_count": 28,
@@ -748,7 +748,7 @@
     {
      "data": {
       "text/plain": [
-       "[['hi', 'buddy'], ['hi', 'world'], ['hi', 'hi']]"
+       "[['hi', 'hi'], ['hi', 'buddy'], ['hi', 'world']]"
       ]
      },
      "execution_count": 29,
@@ -808,7 +808,7 @@
     {
      "data": {
       "text/plain": [
-       "['whom$', 'when$', 'what$']"
+       "['what$', 'whom$', 'when$']"
       ]
      },
      "execution_count": 31,
@@ -863,7 +863,7 @@
     {
      "data": {
       "text/plain": [
-       "['when.']"
+       "['what.']"
       ]
      },
      "execution_count": 33,
@@ -891,7 +891,7 @@
     {
      "data": {
       "text/plain": [
-       "['whom.', 'when.', 'what.']"
+       "['what.', 'whom.', 'when.']"
       ]
      },
      "execution_count": 34,
@@ -907,7 +907,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **WORDS example**\n",
+    "\n",
+    "Lets use the words file as example tests : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/usr/share/dict/words') as f : ww = [ l.rstrip() for l in f.readlines()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['what.', 'whir.', 'whet.', 'whip.', 'when.', 'whey.', 'whim.', 'wham.', 'whoa.', 'whom.', 'whew.', 'whys.', 'whit.', 'whiz.']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.match(regex='wh..', match_prefix_fun=partial(db_search,seqs=ww))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['why.', 'who.']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.match(regex='wh.+', match_prefix_fun=partial(db_search,seqs=ww))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['wok.', 'won.', 'why.', 'woo.', 'who.', 'woe.', 'wot.', 'wow.']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.match(regex='w(h|o).', match_prefix_fun=partial(db_search,seqs=ww))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## TODO\n",
+    "\n",
+    "Currently regex like these are not supported, yet : \n",
+    "\n",
+    "      /(ab){1,3}/, /[abc]{1,3}/\n",
     "\n",
     "One easy addition will be to add support for real numbers. It will require a 'range-checker' that will match close numbers as equals.\n",
     "\n",
